--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -21,6 +21,7 @@
         >
 
 
+
         <TableRow
             style="@style/TableRow"
             android:id="@+id/row0"
@@ -90,6 +91,28 @@
         </TableRow>
 
     </TableLayout>
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical" >
+
+        <Button
+            android:id="@+id/bounceBallButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="Bounce Ball" />
+
+        <ImageView
+            android:id="@+id/bounceBallImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/bounceBallButton"
+            android:background="@drawable/ball_shape" />
+
+    </RelativeLayout>
 
     <Button
         android:id="@+id/button1"
