--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -1,13 +1,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:orientation="vertical"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:id="@+id/transitions_container"
     android:background="#ffBE80FF"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Board">
-
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context=".Board">
 
     <TableLayout
         android:layout_width="wrap_content"
@@ -85,42 +88,28 @@
                 style="@style/RightCell">
 
             </TextView>
+    </TableRow>
 
-
-
-        </TableRow>
-
-    </TableLayout>
+</TableLayout>
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical" >
 
-        <Button
-            android:id="@+id/bounceBallButton"
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/animation_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:text="Bounce Ball" />
+            app:lottie_fileName="firework.json"
+            app:lottie_loop="true"
+            app:lottie_autoPlay="true"
+            />
 
-        <ImageView
-            android:id="@+id/bounceBallImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@id/bounceBallButton"
-            android:background="@drawable/ball_shape" />
 
     </RelativeLayout>
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="DO MAGIC"/>
-
-    <TextView
+     <TextView
         android:id="@+id/text1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -146,20 +135,5 @@
         android:text="Reset Match"
         android:id="@+id/reset"
         />
-
-    <Button
-        android:id="@+id/button_destroy"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="40dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="54dp"
-        android:onClick="playSoundDestroy"
-        android:text="jowe" />
-
 
 </LinearLayout>
