--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -8,9 +8,29 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:id="@+id/transitions_container"
-    android:background="#ffBE80FF"
+    android:background="#99e997"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".Board">
+
+    <TextView
+        android:id="@+id/turn"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="left"
+        android:padding="8dp"
+        android:text="Turn: "
+        android:textColor="@color/blue"
+        android:textSize="24sp" />
+    <Button
+        android:id="@+id/reset"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Reset Match" />
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical" >
 
     <TableLayout
         android:layout_width="wrap_content"
@@ -20,17 +40,18 @@
         android:clickable="true"
         android:padding="10dp"
         android:id="@+id/mainBoard"
+        android:background="#11e997"
         android:nestedScrollingEnabled="false"
         >
-
-
 
         <TableRow
             style="@style/TableRow"
             android:id="@+id/row0"
+            android:background="#345"
             >
             <TextView
                 android:layout_column="0"
+                android:background="#123"
                 style="@style/LeftCell">
 
             </TextView>
@@ -66,8 +87,6 @@
 
             </TextView>
 
-
-
         </TableRow>
         <TableRow
             style="@style/TableRow"
@@ -88,52 +107,19 @@
                 style="@style/RightCell">
 
             </TextView>
-    </TableRow>
 
-</TableLayout>
+        </TableRow>
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="vertical" >
+    </TableLayout>
 
-        <com.airbnb.lottie.LottieAnimationView
+      <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/animation_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            app:lottie_autoPlay="false"
             app:lottie_fileName="firework.json"
-            app:lottie_loop="true"
-            app:lottie_autoPlay="true"
-            />
+            app:lottie_loop="true" />
 
-
-    </RelativeLayout>
-
-     <TextView
-        android:id="@+id/text1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Transitions are awesome!"
-        android:visibility="gone"/>
-
-
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Turn: "
-        android:id="@+id/turn"
-        android:gravity="left"
-        android:padding="10dp"
-        android:textSize="24sp"
-        android:textColor="@color/red"
-        />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Reset Match"
-        android:id="@+id/reset"
-        />
+     </RelativeLayout>
 
 </LinearLayout>
